--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,9 @@ htmml, body {
   padding: 0;
 }
 
-#three {
+#root {
+  margin: 0;
   width: 100vw;
-  height: 100svh;
+  height: 100vh;
+  background: black;
 }
